# XCode

./: .gitignore  Pipfile  README.md  XC.xcf  XC1.xcf  XCdeUI.py  XCode.py  XCode.spec  XCode2.py  XCode2.spec  XCodeUI.py  XCodeUI.ui  XCodeUI2.py  XCodeUI2.ui  XCodeUI_ui.py  XCode_process.py  XCode_process_mitliste.py  XCode_process_mitliste.spec  exe_bauen.cmd  ffcmd.ini  ffcmd.ini.ff  ffcmd.ini.old  ffcmd.py  ffcmd_X264nvenc_fast.ini  ffcmd_hevc_fast.ini  ffcmd_hevc_slow.ini  ffcmd_x265_fast.ini  filmAlyser.py  getVideoSpecs.snipppet  liste.py  logger.py  main.py  make.cmd  make_xcode.cmd  make_xcode.sh  make_xcode2.cmd  nuit.cmd  pyproject.toml  setup.py  transcodeWin.py  (+6 more)
liste/: __init__.py  liste.py
tests/: ffmpy.py  pyInf.py  pytime.py  win2.py
