[tool.poetry]
package-mode = false
# POETRY_VIRTUALENVS_IN_PROJECT = true
name = "xcode"
version = "3.0"
description = "Transcode Videos"
authors = ["'ruegi' <'rg@rgilbert.de'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true