[project]
name = "xcode"
version = "3.0"
description = "Transcode Videos"
authors = [{ name = "'ruegi'", email = "'rg@rgilbert.de'" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyside6>=6.7.1,<7",
    "dotenv>=0.9.9,<0.10",
]

[dependency-groups]
dev = ["nuitka>=2.2.3,<3"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[virtualenvs]
create = true
in-project = true
